--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="main-content">
                 <div class="text">
-                    <h1>About</h1>
+                    <h1>About Me</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing
                          elit. Praesentium distinctio vero dolorem culpa! Nequ
                          e voluptatum quas amet molestiae iste fuga fugiat asp
