disabled profile picture

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="image">
-                    <img src="woman.jpg" alt="image" class="me">
+                    <!-- <img src="woman.jpg" alt="image" class="me"> -->
                 </div>
             </div>
            
