re-arranged mobile view

--- a/contact.html
+++ b/contact.html
@@ -10,44 +10,42 @@
 </head>
 <body>
    <div class="container">
-        <div class="header">
-            <div class="name">
-             <h4>AKINYEMI OLUWANIFEMI</h4>
-             <h4>WEB DEVELOPER</h4>
+    <header>
+        <div class="name">
+         <h4>AKINYEMI OLUWANIFEMI</h4>
+         <h4>WEB DEVELOPER</h4>
+        </div>
+        <div class="nav">
+            <ul class="link">
+             <li><a href="index.html">ABOUT</a></li>
+             <li><a content">
+        <div class="texthref="project.html">PROJECT</a></li>
+             <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </div>
+    </header>
+        <div class="main-content">
+            <div class="left">
+                <div class="shape">
+                    <i class="fa fa-phone" aria-hidden="true"></i>09071006868
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i>akinyeminifemi008@gmail.com
+                </div>
             </div>
-            <div class="nav">
-                <ul class="link">
-                 <li><a href="index.html">ABOUT</a></li>
-                 <li><a href="project.html">PROJECT</a></li>
-                 <li><a href="contact.html">CONTACT</a></li>
-                </ul>
+            <div class="right">
+                 <h2>GET IN TOUCH</h2>
+                <form action="">
+                    <label for="name"></label>
+                    <input type="text" id="name" name="name" placeholder="Name" class="in-put"><br><br>
+                    <label for="email"></label>
+                    <input type="email" id="email" name="email" placeholder="E-mail" class="in-put"><br><br>
+                    <label for="phone-number"></label>
+                    <input type="tel" id="phone-number" name="phone-number" placeholder="Phone-number" class="in-put"><br><br>
+                    <textarea name="comment" id="comment" cols="" rows="10" placeholder="How can I help you?"></textarea>
+                    <input type="submit" value="Send" class="send">
+                </form>
             </div>
         </div>
-        <div class="main-content">
-                <div class="left">
-                    <div class="shape">
-                        <i class="fa fa-phone" aria-hidden="true"></i>0907100686
-                        <i class="fa fa-envelope-o" aria-hidden="true"></i>akinyeminifemi008@gmail.com
-                    </div>
-                </div>
-                <div class="right">
-                    <h2>GET IN TOUCH</h2>
-                    <form action="">
-                        <label for="name"></label>
-                        <input type="text" id="name" name="name" placeholder="Name" class="in-put"><br><br>
-                        <label for="email"></label>
-                        <input type="email" id="email" name="email" placeholder="E-mail" class="in-put"><br><br>
-                        <label for="phone-number"></label>
-                        <input type="tel" id="phone-number" name="phone-number" placeholder="Phone-number" class="in-put"><br><br>
-                        <label for="name"></label>
-                        <input type="text" id="name" name="name" placeholder="Name" class="in-put"><br><br>
-                        <textarea name="comment" id="comment" cols="" rows="10" placeholder="How can I help you?"></textarea>
-                        <input type="submit" value="Send" class="send">
-                    </form>
-            </div>
-      
-            </div>
-                 <footer>
+        <footer>
             <div class="font">
                 <i class="fa fa-facebook face" aria-hidden="true"></i>
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
