--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <div class="container">
-        <div class="header">
+        <header>
             <div class="name">
              <h4>AKINYEMI OLUWANIFEMI</h4>
              <h4>WEB DEVELOPER</h4>
@@ -22,44 +22,43 @@
                  <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
-        </div>
+        </header>
         <div class="main-content">
-                <div class="text">
-                    <h1>About Me</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing
-                         elit. Praesentium distinctio vero dolorem culpa! Nequ
-                         e voluptatum quas amet molestiae iste fuga fugiat asp
-                         ernatur dicta quidem! Sunt labore minima sapiente dol
-                         or totam cupiditate culpa iste ipsa expedita omnis no
-                         strum natus obcaecati odit, similique vel reiciendis al
-                         ias iusto suscipit a eveniet distinctio quas.
-                    </p>
-                    <div class="skills">
-                        <h1>My Skills</h1>
-                    </div>
-                    <div class="icon">
-                        <i class="fa fa-html5" aria-hidden="true" id="red"></i>
-                        <i class="fa fa-css3"  aria-hidden="true" id="blue"></i>
-                        <i class="fa fa-code"  aria-hidden="true" id="yellow"></i>
-                    </div>
+            <div class="text">
+                <h1>About Me</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing
+                     elit. Praesentium distinctio vero dolorem culpa! Nequ
+                     e voluptatum quas amet molestiae iste fuga fugiat asp
+                     ernatur dicta quidem! Sunt labore minima sapiente dol
+                     or totam cupiditate culpa iste ipsa expedita omnis no
+                     strum natus obcaecati odit, similique vel reiciendis al
+                     ias iusto suscipit a eveniet distinctio quas.
+                </p>
+                <div class="skills">
+                    <h1>My Skills</h1>
                 </div>
-                <div class="image">
-                    <img src="woman.jpg" alt="image" class="me">
+                <div class="icon">
+                    <i class="fa fa-html5" aria-hidden="true" id="red"></i>
+                    <i class="fa fa-css3"  aria-hidden="true" id="blue"></i>
+                    <i class="fa fa-code"  aria-hidden="true" id="yellow"></i>
                 </div>
             </div>
-           
-            <footer>
-                <div class="font">
-                    <i class="fa fa-facebook face" aria-hidden="true"></i>
-                    <i class="fa fa-linkedin" aria-hidden="true"></i>
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                    <i class="fa fa-github" aria-hidden="true"></i>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                </div>
-                <div class="copy">
-                    <h4>Copyright &copy; 2022</h4>
-                </div>
-            </footer>
+            <div class="image">
+                <img src="woman.jpg" alt="image" class="me">
+            </div>
+        </div>
+        <footer>
+            <div class="font">
+                <i class="fa fa-facebook face" aria-hidden="true"></i>
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <i class="fa fa-github" aria-hidden="true"></i>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+            </div>
+            <div class="copy">
+                <h4>Copyright &copy; 2022</h4>
+            </div>
+        </footer>
    </div>
 </body>
 </html>
