--- a/project.html
+++ b/project.html
@@ -10,19 +10,20 @@
 </head>
 <body>
    <div class="container">
-        <div class="header">
-            <div class="name">
-             <h4>AKINYEMI OLUWANIFEMI</h4>
-             <h4>WEB DEVELOPER</h4>
-            </div>
-            <div class="nav">
-                <ul class="link">
-                 <li><a href="index.html">ABOUT</a></li>
-                 <li><a href="project.html">PROJECT</a></li>
-                 <li><a href="contact.html">CONTACT</a></li>
-                </ul>
-            </div>
+    <header>
+        <div class="name">
+         <h4>AKINYEMI OLUWANIFEMI</h4>
+         <h4>WEB DEVELOPER</h4>
         </div>
+        <div class="nav">
+            <ul class="link">
+             <li><a href="index.html">ABOUT</a></li>
+             <li><a content">
+        <div class="texthref="project.html">PROJECT</a></li>
+             <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </div>
+    </header>
         <div class="main-content">
             <div class="pro-content">
                 <div class="first">
@@ -71,7 +72,6 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
            <footer>
                 <div class="font">
                     <i class="fa fa-facebook face" aria-hidden="true"></i>
@@ -83,7 +83,6 @@
                 <div class="copy">
                     <h4>Copyright &copy; 2022</h4>
                 </div>
-            </footer>
         </div>
    </div>
 </body>
