re-arranged my code

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                 </div>
             </div>
             <div class="image">
-                <img src="woman.jpg" alt="image" class="me">
+                <img src="my picture.jpg" alt="image" class="me">
             </div>
         </div>
         <footer>
             <div class="font">
-                <i class="fa fa-facebook face" aria-hidden="true"></i>
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-                <i class="fa fa-github" aria-hidden="true"></i>
-                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <a href="https://web.facebook.com/profile.php?id=100086941074950"><i class="fa fa-facebook face" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/oluwanifemi-akinyemi-13350a254/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/shejustwantstocode/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://github.com/Harkinyemi"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/Akinyemiwebdev"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </div>
             <div class="copy">
                 <h4>Copyright &copy; 2022</h4>
