developed more attractive features

--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
         </header>
         <div class="main-content">
             <div class="text">
-                <h1>About Me</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing
-                     elit. Praesentium distinctio vero dolorem culpa! Nequ
-                     e voluptatum quas amet molestiae iste fuga fugiat asp
-                     ernatur dicta quidem! Sunt labore minima sapiente dol
-                     or totam cupiditate culpa iste ipsa expedita omnis no
-                     strum natus obcaecati odit, similique vel reiciendis al
-                     ias iusto suscipit a eveniet distinctio quas.
+                <h1 id="about">About Me</h1>
+                <p>
+                    I am Oluwanifemi Akinyemi from Nigeria. I have had beautiful experiences while building
+                    my skill in developing this year and as a young developer,
+                    creating artistic pleasing websites is my strong point. The utptmost importance 
+                    of my work is to grab attention while conveying messages to users.
                 </p>
                 <div class="skills">
                     <h1>My Skills</h1>
@@ -49,11 +47,11 @@
         </div>
         <footer>
             <div class="font">
-                <a href="https://web.facebook.com/profile.php?id=100086941074950"><i class="fa fa-facebook face" aria-hidden="true"></i></a>
-                <a href="https://www.linkedin.com/in/oluwanifemi-akinyemi-13350a254/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                <a href="https://www.instagram.com/shejustwantstocode/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                <a href="https://github.com/Harkinyemi"><i class="fa fa-github" aria-hidden="true"></i></a>
-                <a href="https://twitter.com/Akinyemiwebdev"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://web.facebook.com/profile.php?id=100086941074950" target="_blank" ><i class="fa fa-facebook face" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/oluwanifemi-akinyemi-13350a254/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/shejustwantstocode/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://github.com/Harkinyemi" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/Akinyemiwebdev" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </div>
             <div class="copy">
                 <h4>Copyright &copy; 2022</h4>
