--- a/project.html
+++ b/project.html
@@ -18,8 +18,7 @@
         <div class="nav">
             <ul class="link">
              <li><a href="index.html">ABOUT</a></li>
-             <li><a content">
-        <div class="texthref="project.html">PROJECT</a></li>
+             <li><a href="project.html">PROJECT</a></li>
              <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
@@ -34,8 +33,8 @@
                          i vitae est voluptatum fuga delectus consequatur, suscipit fugit reiciendis
                          ? Porro.
                     </p>
-                    <input type="button" value="view" class="bon">
-                    <input type="button" value="view" class="bon">
+                    <input type="button" value="View" class="bon">
+                    <input type="button" value="View" class="bon">
                 </div>
                 <div class="second">
                     <img src="./clone.jpg" alt="project" width="100%" height="auto">
@@ -45,8 +44,8 @@
                         i vitae est voluptatum fuga delectus consequatur, suscipit fugit reiciendis
                         ? Porro.
                    </p>
-                    <input type="button" value="view" class="bon">
-                    <input type="button" value="view" class="bon">
+                    <input type="button" value="View" class="bon">
+                    <input type="button" value="View" class="bon">
                 </div>
                 <div class="third">
                     <img src="./clone.jpg" alt="project" width="100%" height="auto">
@@ -56,8 +55,8 @@
                         i vitae est voluptatum fuga delectus consequatur, suscipit fugit reiciendis
                         ? Porro.
                    </p>
-                    <input type="button" value="view" class="bon">
-                    <input type="button" value="view" class="bon">
+                    <input type="button" value="View" class="bon">
+                    <input type="button" value="View" class="bon">
                 </div>
                 <div class="fourth">
                     <img src="./clone.jpg" alt="project" width="100%" height="auto">
@@ -67,23 +66,23 @@
                         i vitae est voluptatum fuga delectus consequatur, suscipit fugit reiciendis
                         ? Porro.
                    </p>
-                    <input type="button" value="view" class="bon">
-                    <input type="button" value="view" class="bon">
+                    <input type="button" value="View" class="bon">
+                    <input type="button" value="View" class="bon">
                 </div>
             </div>
         </div>
-           <footer>
-                <div class="font">
-                    <i class="fa fa-facebook face" aria-hidden="true"></i>
-                    <i class="fa fa-linkedin" aria-hidden="true"></i>
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                    <i class="fa fa-github" aria-hidden="true"></i>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                </div>
-                <div class="copy">
-                    <h4>Copyright &copy; 2022</h4>
-                </div>
-        </div>
+        <footer>
+            <div class="font">
+                <a href="https://web.facebook.com/profile.php?id=100086941074950" target="_blank" ><i class="fa fa-facebook face" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/oluwanifemi-akinyemi-13350a254/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/shejustwantstocode/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://github.com/Harkinyemi" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/Akinyemiwebdev" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </div>
+            <div class="copy">
+                <h4>Copyright &copy; 2022</h4>
+            </div>
+        </footer>
    </div>
 </body>
 </html>
