--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,7 @@
         <div class="nav">
             <ul class="link">
              <li><a href="index.html">ABOUT</a></li>
-             <li><a content">
-        <div class="texthref="project.html">PROJECT</a></li>
+             <li><a href="project.html">PROJECT</a></li>
              <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
@@ -27,8 +26,8 @@
         <div class="main-content">
             <div class="left">
                 <div class="shape">
-                    <i class="fa fa-phone" aria-hidden="true"></i>09071006868
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>akinyeminifemi008@gmail.com
+                    <i class="fa fa-phone" aria-hidden="true"> 09071006868</i>
+                    <i class="fa fa-envelope-o" aria-hidden="true">  akinyeminifemi008@gmail.com</i>
                 </div>
             </div>
             <div class="right">
@@ -47,11 +46,11 @@
         </div>
         <footer>
             <div class="font">
-                <i class="fa fa-facebook face" aria-hidden="true"></i>
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-                <i class="fa fa-github" aria-hidden="true"></i>
-                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <a href="https://web.facebook.com/profile.php?id=100086941074950" target="_blank" ><i class="fa fa-facebook face" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/oluwanifemi-akinyemi-13350a254/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/shejustwantstocode/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://github.com/Harkinyemi" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/Akinyemiwebdev" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </div>
             <div class="copy">
                 <h4>Copyright &copy; 2022</h4>
