--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Akinyemi's About page</title>
 </head>
 <body>
    <div class="container">
@@ -17,7 +17,7 @@
             </div>
             <div class="nav">
                 <ul class="link">
-                 <li><a href="index.html">ABOUT</a></li>
+                 <li><a href="index.html" class="about-link">ABOUT</a></li>
                  <li><a href="project.html">PROJECT</a></li>
                  <li><a href="contact.html">CONTACT</a></li>
                 </ul>
@@ -27,7 +27,7 @@
             <div class="text">
                 <h1 id="about">About Me</h1>
                 <p>
-                    I am Oluwanifemi Akinyemi from Nigeria. I have had beautiful experiences while building
+                    I am Oluwanifemi Akinyemi based in Nigeria. I have had beautiful experiences while building
                     my skill in developing this year and as a young developer,
                     creating artistic pleasing websites is my strong point. The utptmost importance 
                     of my work is to grab attention while conveying messages to users.
@@ -36,9 +36,9 @@
                     <h1>My Skills</h1>
                 </div>
                 <div class="icon">
-                    <i class="fa fa-html5" aria-hidden="true" id="red"></i>
-                    <i class="fa fa-css3"  aria-hidden="true" id="blue"></i>
-                    <i class="fa fa-code"  aria-hidden="true" id="yellow"></i>
+                    <i class="fa fa-html5" aria-hidden="true" id="red" title="HTML"></i>
+                    <i class="fa fa-css3"  aria-hidden="true" id="blue" title="CSS"></i>
+                    <i class="fa fa-code"  aria-hidden="true" id="yellow" title="JAVASCRIPT"></i>
                 </div>
             </div>
             <div class="image">
