--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Akinyemi's Project page</title>
 </head>
 <body>
    <div class="container">
@@ -18,7 +18,7 @@
         <div class="nav">
             <ul class="link">
              <li><a href="index.html">ABOUT</a></li>
-             <li><a href="project.html">PROJECT</a></li>
+             <li><a href="project.html"   class="project-link">PROJECT</a></li>
              <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
@@ -33,8 +33,8 @@
                          i vitae est voluptatum fuga delectus consequatur, suscipit fugit reiciendis
                          ? Porro.
                     </p>
-                    <input type="button" value="View" class="bon">
-                    <input type="button" value="View" class="bon">
+                    <input type="button" value="View Live" class="bon">
+                    <input type="button" value="View on github" class="bon">
                 </div>
                 <div class="second">
                     <img src="./clone.jpg" alt="project" width="100%" height="auto">
@@ -44,8 +44,8 @@
                         i vitae est voluptatum fuga delectus consequatur, suscipit fugit reiciendis
                         ? Porro.
                    </p>
-                    <input type="button" value="View" class="bon">
-                    <input type="button" value="View" class="bon">
+                    <input type="button" value="View Live" class="bon">
+                    <input type="button" value="View on github" class="bon">
                 </div>
                 <div class="third">
                     <img src="./clone.jpg" alt="project" width="100%" height="auto">
@@ -55,8 +55,8 @@
                         i vitae est voluptatum fuga delectus consequatur, suscipit fugit reiciendis
                         ? Porro.
                    </p>
-                    <input type="button" value="View" class="bon">
-                    <input type="button" value="View" class="bon">
+                    <input type="button" value="View Live" class="bon">
+                    <input type="button" value="View on github" class="bon">
                 </div>
                 <div class="fourth">
                     <img src="./clone.jpg" alt="project" width="100%" height="auto">
@@ -66,8 +66,8 @@
                         i vitae est voluptatum fuga delectus consequatur, suscipit fugit reiciendis
                         ? Porro.
                    </p>
-                    <input type="button" value="View" class="bon">
-                    <input type="button" value="View" class="bon">
+                    <input type="button" value="View Live" class="bon">
+                    <input type="button" value="View on github" class="bon">
                 </div>
             </div>
         </div>
